--- a/ReactiveBinderGenerators.Tests/ReactiveBinderGenerators.Tests.csproj
+++ b/ReactiveBinderGenerators.Tests/ReactiveBinderGenerators.Tests.csproj
@@ -1,8 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
+	  <LangVersion>preview</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -10,7 +11,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ReactiveBinderGenerator\ReactiveBinderGenerators.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
+    <ProjectReference Include="..\ReactiveBinderGenerator\ReactiveBinderGenerators.csproj" 
+					  OutputItemType="Analyzer" 
+					  ReferenceOutputAssembly="false" />
   </ItemGroup>
 
 </Project>
